fix: party page block layout problem

--- a/styles/Party.module.scss
+++ b/styles/Party.module.scss
@@ -32,29 +32,27 @@
 }
 @media screen and (min-width: 1280px) {
   .container {
-    height: 735px;
+    height: calc(100vh - 160px);
     width: 1280px;
     padding: 0 22px;
     position: relative;
     margin: 0 auto;
 
-    .img {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 205px;
-      z-index: 2;
-    }
     .imgM {
       display: none;
     }
     .block {
       width: 1236px;
-      height: 288px;
+      height: 50%;
       position: absolute;
       bottom: 0;
       background-color: #bdead0;
       opacity: 0.51;
+      .img {
+        text-align: center;
+        margin: -140px auto 0;
+        z-index: 2;
+      }
     }
   }
 }
